--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:3tz0XEk7zApqEIaPEDeWHTjOcrMIMkejuOtgMUg6Bno=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=https://os-master.online/
+APP_URL=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
  DB_HOST=127.0.0.1
  DB_PORT=3306
-DB_DATABASE=u881014643_masteros
-DB_USERNAME=u881014643_masteros
-DB_PASSWORD=Ma14036716646@
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -47,12 +47,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.hostinger.com
-MAIL_PORT=587
-MAIL_USERNAME=contact@os-master.online
-MAIL_PASSWORD=Ma14036716646@@
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=contact@os-master.online
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 
